--- a/src/components/Navigator.css
+++ b/src/components/Navigator.css
@@ -4,7 +4,7 @@ nav {
     /* background: linear-gradient(var(--bg-color-darker), var(--secondary-bg-color) 40%); */
     padding: 0px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     width: 100%;
     box-sizing: border-box;
     position: fixed;
@@ -35,6 +35,7 @@ nav {
 nav .navigation-link {
     background: var(--background-navigator-link);
     width: 100%;
+    max-width: 12em;
     font-size: 1.2em;
     font-weight: 600;
     /*padding: 9px;*/
